<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.example</groupId> <!-- Add your group ID here -->
    <artifactId>core-java</artifactId>
    <version>1.0.0</version> <!-- Add your version here -->
    <packaging>jar</packaging>
    <name>core-java</name>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
           <!-- <scope>test</scope>-->
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version> <!-- Explicitly specify the plugin version -->
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source.version>22</maven.compiler.source.version>
        <maven.compiler.target.version>22</maven.compiler.target.version>
        <maven.compiler.release>22</maven.compiler.release>
        <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
        <commons-lang3.version>3.12.0</commons-lang3.version> <!-- Define the version for commons-lang3 -->
        <commons-io.version>2.11.0</commons-io.version> <!-- Define the version for commons-io -->
    </properties>
</project>
